--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint-config-airbnb": "^18.0.1",
     "expo": "^35.0.0",
     "mem": "^6.0.1",
+    "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
